Updated links on all three pages and home page

--- a/recipes/veggiechips.html
+++ b/recipes/veggiechips.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1><strong>Veggie Chips</strong></h1>
-        <a href="..index/html">Home</a>
+         <a href="../index.html">Home</a>
         <br>
         <br>
         <img src="../images/veggiechips.jpg" alt="veggie chips">
@@ -35,5 +35,8 @@
             <a href="../recipes/DevilEggs.html">
             <img src="../images/DevilEggs.jpg" alt="Devil Eggs">
             </a>
+                <a href="../recipes/broilersmores.html">
+         <img src="../images/boilersmores.jpg" alt="Broiler S'mores">
+        </a>
     </body>
 </html>
