Updated links on home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/DevilEggs.html">recipe title</a>
+        <ul>
+        <li><a href="recipes/DevilEggs.html">Devil eggs</a></li>
+        <li><a href="recipes/veggiechips.html">Veggie Chips</a></li>
+        <li><a href="recipes/broilersmores.html">Broiler S'mores</a></li>
+        </ul>
     </body>
-</html>
+</html> 
