Updated Devil Eggs and Veggie Chips recipes

--- a/recipes/DevilEggs.html
+++ b/recipes/DevilEggs.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Devil Eggs</h1>
-        <a href="../index.html">home</a>
+        <a href="../index.html">Home</a>
         <br>
         <br>
         <img src="../images/devileggs.jpg" alt="a plate of devil eggs">
@@ -31,5 +31,12 @@
             <li>Add the mayonnaise, a teaspoon of English mustard, the salt and paprika to the egg yolks, and shake a few drops of Tabasco on top. Stir and mash with a fork, then blend with a stick blender or in a food processor. Add the oil and blend again until smooth. It will be very thick. Check for seasoning and also taste to see if you want this hotter. I generally go up to 2 teaspoons of mustard and quite a bit more Tabasco, but it’s best to proceed slowly. Now, by hand, stir in as much of the water as you need to help form a piping consistency</li>
             <li>Spoon the golden mixture into a piping bag with a star icing nozzle, making sure it is densely packed at the bottom of the bag. Then pipe away, filling the hollowed-out whites with golden rosettes. Or you can mound the yolk mixture using a pair of teaspoons. Sprinkle with paprika and chopped chives and serve with a flourish.</li>
         </ol>
+        <h5><strong><u>Fancy something different? why not try these instead?</u></strong></h5>
+        <a href="../recipes/broilersmores.html">
+         <img src="../images/boilersmores.jpg" alt="Broiler S'mores">
+        </a>
+        <a href="../recipes/veggiechips.html">
+        <img src="../images/veggiechips.jpg" alt="Veggie Chips">
+        </a> 
     </body>
 </html>
