--- a/recipes/veggiechips.html
+++ b/recipes/veggiechips.html
@@ -9,10 +9,10 @@
          <a href="../index.html">Home</a>
         <br>
         <br>
-        <img src="../images/veggiechips.jpg" alt="veggie chips">
-        <h2><strong>Description<strong></h2>
-            <p>Crispy, crunchy, and guilt-free — these Veggie Chips are proof that vegetables can be just as addictive as potato chips (but with slightly better karma). Snack responsibly… or don’t, we won’t tell!"</p>
-            <h3><stong><u>Indgredients</u></stong></h3>
+        <img src="../images/veggiechips.jpg" alt="Veggie Chips">
+        <h2><strong>Description</strong></h2>
+            <p>Crispy, crunchy, and guilt-free — these Veggie Chips are proof that vegetables can be just as addictive as potato chips (but with slightly better karma). Snack responsibly… or don’t, we won’t tell!</p>
+            <h3><strong><u>Ingredients</u></strong></h3>
             <ul>
                 <li>4 small golden beets</li>
                 <li>4 small red beets</li>
@@ -31,7 +31,7 @@
                 <li>Toss the veggies into a large bowl with the olive oil (you may want to toss the red beets separately to avoid turning everything pink). Spread them in an even layer onto the prepared baking sheets, making sure they do not overlap too much.</li>
                 <li>Sprinkle the salt, pepper and herbs evenly over the two baking sheets. Roast the vegetables until golden brown and crisp, 20 to 25 minutes. Cool completely before serving. Store in an airtight container to maintain the crisp texture for up to one week.</li>
             </ol>
-            <h5><strong><u>Fancy something different? why not try these instead?<u></u></strong></h5>
+            <h5><strong><u>Fancy something different? why not try these instead?</u></strong></h5>
             <a href="../recipes/DevilEggs.html">
             <img src="../images/DevilEggs.jpg" alt="Devil Eggs">
             </a>
