Remove extra link from html to follow assignment

--- a/recipes/broilersmores.html
+++ b/recipes/broilersmores.html
@@ -26,9 +26,12 @@
                 <li>Place the pan under the broiler and watch for the marshmallows to toast, about 1 to 2 minutes. (This can happen pretty fast, so keep an eye on them.) When the marshmallows are golden brown, remove the pan from the broiler, using an oven mitt.</li>
                 <li>Let cool slightly, then top with the remaining graham crackers. Serve immediately.</li>
                </ol>
-               <h5><strong><u>Fancy something different? why not try these instead?<u></u></strong></h5>
+               <h5><strong><u>Fancy something different? why not try these instead?</u></strong></h5>
                <a href="../recipes/DevilEggs.html">
                <img src="../images/DevilEggs.jpg" alt="Devil Eggs">
             </a>
+              <a href="../recipes/veggiechips.html">
+        <img src="../images/veggiechips.jpg" alt="Veggie Chips">
+        </a> 
     </body>
 </html>
